result-manifest.yaml
apiVersion: v1
kind: Service
metadata:
    name: result
        namespace: myapp
        spec:
            selector:
                  app: result
                      ports:
                            - protocol: TCP
                                    port: 80
                                            targetPort: 80
                                                type: LoadBalancer
