vote-lb.yaml
apiVersion: v1
kind: Service
metadata:
    name: vote
    namespace: myapp
spec:
  selector:
    app: vote
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
